delete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techsolutions-deployment
  namespace: techsolutions
  labels:
    app: techsolutions
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: techsolutions-app
  template:
    metadata:
      labels:
        app: techsolutions
    spec:
      containers:
      - name: techsolutions
        image: sandeep530/techsolutions-app:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64mi"
            cpu: "250m"
          limits:
            memory: "128mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
